--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "values",
-    "slug": "values",
+    "name": "Dolar Blu",
+    "slug": "dolar-blu",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
