--- a/app.json
+++ b/app.json
@@ -16,17 +16,11 @@
     "assetBundlePatterns": [
       "**/*"
     ],
-    "ios": {
-      "supportsTablet": true
-    },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
+      "package": "com.luigii.dolarblu"
     }
+  },
+  "web": {
+    "favicon": "./assets/favicon.png"
   }
 }
