--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.4.1",
+    "react-native-responsive-linechart": "^5.7.1",
     "react-native-screens": "~2.15.2",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
