--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-paper": "^4.4.1",
     "react-native-screens": "~2.15.2",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "expo-updates": "~0.4.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
