--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
     "lint": "tsc --noEmit && eslint --ext .js,.jsx,.ts,.tsx ./"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "~1.12.0",
+    "@react-native-async-storage/async-storage": "^1.13.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
     "axios": "^0.21.0",
-    "expo": "^40.0.0",
+    "expo": "^41.0.0",
     "expo-app-loading": "^1.2.1",
-    "expo-status-bar": "~1.0.3",
+    "expo-status-bar": "~1.0.4",
+    "expo-updates": "~0.5.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-paper": "^4.4.1",
-    "react-native-screens": "~2.15.2",
-    "react-native-web": "~0.13.12",
-    "expo-updates": "~0.4.1"
+    "react-native-screens": "~3.0.0",
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
@@ -34,7 +34,6 @@
     "@typescript-eslint/parser": "^5.4.0",
     "eslint": "^8.3.0",
     "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-native": "^3.11.0",
     "typescript": "~4.0.0"
   },
   "private": true
