--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
     "lint": "tsc --noEmit && eslint --ext .js,.jsx,.ts,.tsx ./"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.13.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
     "axios": "^0.21.0",
-    "expo": "^41.0.0",
-    "expo-app-loading": "^1.2.1",
+    "expo": "^42.0.0",
+    "expo-app-loading": "1.1.2",
     "expo-status-bar": "~1.0.4",
-    "expo-updates": "~0.5.4",
+    "expo-updates": "~0.8.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-paper": "^4.4.1",
-    "react-native-screens": "~3.0.0",
+    "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
