--- a/package.json
+++ b/package.json
@@ -14,27 +14,28 @@
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
     "axios": "^0.21.0",
-    "expo": "^42.0.0",
-    "expo-app-loading": "1.1.2",
-    "expo-status-bar": "~1.0.4",
-    "expo-updates": "~0.8.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "expo": "^43.0.0",
+    "expo-app-loading": "~1.2.1",
+    "expo-status-bar": "~1.1.0",
+    "expo-updates": "~0.10.15",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
     "react-native-paper": "^4.4.1",
-    "react-native-screens": "~3.4.0",
-    "react-native-web": "~0.13.12"
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-dom": "~16.9.8",
-    "@types/react-native": "~0.63.2",
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
+    "@types/react-dom": "~17.0.9",
+    "@types/react-native": "~0.64.12",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "eslint": "^8.3.0",
     "eslint-plugin-react": "^7.27.1",
-    "typescript": "~4.0.0"
+    "typescript": "~4.3.5"
   },
   "private": true
 }
